# ToDo

./: LICENSE  README.md  pyproject.toml
rptodoProject/: __main__.py  cli.py  config.py  database.py  exceptions.py  render.py  rptodo.py  toDo.py
tests/: test_cli.py  test_config.py  test_database.py
