[tool.poetry]
name = "ToDo"
version = "0.1.0"
description = ""
authors = ["Josh Poirier <joshpoirier97@gmail.com>"]
packages = [
    { include = "rptodoProject" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest-mock = "^3.8.2"
pytest-cov = "^3.0.0"
black = "^22.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
todo = "rptodoProject.cli:main"

[tool.black]
line-length = 120